[gd_scene load_steps=9 format=3 uid="uid://jqyjx5vv1fpy"]

[ext_resource type="Script" uid="uid://b1ejhdshlsua3" path="res://scenes/castle/heat_dome/heat_dome.gd" id="1_l7s2y"]
[ext_resource type="Material" uid="uid://boymajqjt407s" path="res://scenes/castle/heat_dome/heat_shader_hex.tres" id="2_qfupc"]

[sub_resource type="FogMaterial" id="FogMaterial_xujgp"]

[sub_resource type="FogMaterial" id="FogMaterial_qfupc"]

[sub_resource type="SphereMesh" id="SphereMesh_l7s2y"]
material = ExtResource("2_qfupc")
radius = 20.0
height = 20.0
is_hemisphere = true

[sub_resource type="SphereMesh" id="SphereMesh_px6c0"]
material = ExtResource("2_qfupc")
flip_faces = true
radius = 20.0
height = 20.0
is_hemisphere = true

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_qfupc"]
properties/0/path = NodePath(".:heat_dome_radius")
properties/0/spawn = true
properties/0/replication_mode = 1

[sub_resource type="QuadOccluder3D" id="QuadOccluder3D_qfupc"]
size = Vector2(100, 50)

[node name="HeatDome" type="Node3D"]
script = ExtResource("1_l7s2y")

[node name="FogVolumes" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 10, 0)
visible = false

[node name="FogVolume1" type="FogVolume" parent="FogVolumes"]
visible = false
size = Vector3(40, 40, 40)
shape = 2
material = SubResource("FogMaterial_xujgp")

[node name="FogVolume2" type="FogVolume" parent="FogVolumes"]
visible = false
size = Vector3(70, 40, 70)
shape = 2
material = SubResource("FogMaterial_qfupc")

[node name="HeatDomeExterior" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.2, 0)
sorting_offset = 100.0
visibility_range_end = 20.0
visibility_range_end_margin = 125.0
visibility_range_fade_mode = 1
mesh = SubResource("SphereMesh_l7s2y")

[node name="HeatDomeInterior" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.2, 0)
sorting_offset = 100.0
visibility_range_end = 20.0
visibility_range_end_margin = 125.0
visibility_range_fade_mode = 1
mesh = SubResource("SphereMesh_px6c0")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_qfupc")

[node name="OccluderInstance3D" type="OccluderInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 15, 80)
visible = false
occluder = SubResource("QuadOccluder3D_qfupc")

[node name="OccluderInstance3D3" type="OccluderInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 15, -80)
visible = false
occluder = SubResource("QuadOccluder3D_qfupc")
